modules/vpc/main.tf
resource "aws_vpc" "vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = var.enable_dns_support
  enable_dns_hostnames = var.enable_dns_hostnames

  tags = {
    Name        = "${var.project}-${var.environment}-vpc"
    Environment = terraform.workspace
    Project     = var.project
    Owner       = var.owner
    CostCenter  = var.costcenter
    managed_by  = "terraform"
    service     = var.service
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name        = "${var.project}-${var.environment}-igw"
    Environment = terraform.workspace
    Project     = var.project
    Owner       = var.owner
    CostCenter  = var.costcenter
    managed_by  = "terraform"
    service     = var.service
  }
}

resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.vpc.id
  count                   = length(var.public_subnets_cidr)
  cidr_block              = element(var.public_subnets_cidr, count.index)
  availability_zone       = element(var.azs, count.index)
  map_public_ip_on_launch = var.map_public_ip_on_launch

  tags = {
    Name        = "${var.project}-${var.environment}-public-${count.index}"
    Environment = terraform.workspace
    Project     = var.project
    Owner       = var.owner
    CostCenter  = var.costcenter
    managed_by  = "terraform"
    service     = var.service
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name        = "${var.project}-${var.environment}-public"
    Environment = terraform.workspace
    Project     = var.project
    Owner       = var.owner
    CostCenter  = var.costcenter
    managed_by  = "terraform"
    service     = var.project
  }
}

resource "aws_route_table_association" "public" {
  count          = length(var.public_subnets_cidr)
  subnet_id      = element(aws_subnet.public.*.id, count.index)
  route_table_id = aws_route_table.public.id
}

resource "aws_subnet" "private" {
  vpc_id                  = aws_vpc.vpc.id
  count                   = length(var.private_subnets_cidr)
  cidr_block              = element(var.private_subnets_cidr, count.index)
  availability_zone       = element(var.azs, count.index)
  map_public_ip_on_launch = false

  tags = {
    Name        = "${var.project}-${var.environment}-private-${count.index}"
    Environment = terraform.workspace
    Project     = var.project
    Owner       = var.owner
    CostCenter  = var.costcenter
    managed_by  = "terraform"
    service     = var.service
  }
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name        = "${var.project}-${var.environment}-private"
    Environment = terraform.workspace
    Project     = var.project
    Owner       = var.owner
    CostCenter  = var.costcenter
    managed_by  = "terraform"
    service     = var.service
  }
}

resource "aws_route_table_association" "private" {
  count          = length(var.private_subnets_cidr)
  subnet_id      = element(aws_subnet.private.*.id, count.index)
  route_table_id = aws_route_table.private.id
}

resource "aws_subnet" "igw" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = var.igw_cidr
  map_public_ip_on_launch = false

  tags = {
    Name        = "${var.project}-${var.environment}-igw"
    Environment = terraform.workspace
    Project     = var.project
    Owner       = var.owner
    CostCenter  = var.costcenter
    managed_by  = "terraform"
    service     = var.service
  }
}

resource "aws_subnet" "nat" {
  vpc_id                  = aws_vpc.vpc.id
  count                   = length(var.nat_cidr)
  cidr_block              = element(var.nat_cidr, count.index)
  availability_zone       = element(var.azs, count.index)
  map_public_ip_on_launch = false

  tags = {
    Name        = "${var.project}-${var.environment}-nat-${count.index}"
    Environment = terraform.workspace
    Project     = var.project
    Owner       = var.owner
    CostCenter  = var.costcenter
    managed_by  = "terraform"
    service     = var.service
  }
}

resource "aws_eip" "nat" {
  vpc = true
}

resource "aws_nat_gateway" "natgw" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.igw.id
}

resource "aws_route_table" "nat" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.natgw.id
  }

  tags = {
    Name        = "${var.project}-${var.environment}-nat"
    Environment = terraform.workspace
    Project     = var.project
    Owner       = var.owner
    CostCenter  = var.costcenter
    managed_by  = "terraform"
    service     = var.service
  }
}

resource "aws_route_table_association" "nat" {
  count          = length(var.nat_cidr)
  subnet_id      = element(aws_subnet.nat.*.id, count.index)
  route_table_id = aws_route_table.nat.id
}

resource "aws_route_table" "igw" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name        = "${var.project}-${var.environment}-igw"
    Environment = terraform.workspace
    Project     = var.project
    Owner       = var.owner
    CostCenter  = var.costcenter
    managed_by  = "terraform"
    service     = var.service
  }
}

resource "aws_route_table_association" "igw" {
  subnet_id      = aws_subnet.igw.id
  route_table_id = aws_route_table.igw.id
}
